# debio-node

./: .debio.pipeline.yml  .dockerignore  .gitignore  CODEOWNERS  Cargo.toml  Dockerfile  LAB_DATA_STRUCTURE.md  Makefile  README.md  SHA256SUMS  build-spec.sh  debioSpec.json  debioSpecRaw.json  docker-build-prod.sh  docker-build-stg.sh  docker-build.sh  docker-compose.yml  docker-run-unsafe.sh  docker-run.sh  package-lock.json  sonar-project.properties  types.json
node/: Cargo.toml
node/res/: dev-testnet.json  mainnet.json  octopus-mainnet.json  octopus-testnet.json
node/res/dev/: SHA256SUMS  debioDevSpec.json
node/res/main/: SHA256SUMS  debioSpec.json
node/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/certifications/: Cargo.toml
pallets/certifications/benchmarking/: Cargo.toml
pallets/certifications/src/: benchmarking.rs  interface.rs  lib.rs  mock.rs  weights.rs
pallets/certifications/tests/: Cargo.toml
pallets/certifications/traits/: Cargo.toml
pallets/doctor-certifications/: Cargo.toml
pallets/doctor-certifications/benchmarking/: Cargo.toml
pallets/doctor-certifications/src/: interface.rs  lib.rs  weights.rs
pallets/doctor-certifications/tests/: Cargo.toml
pallets/doctor-certifications/traits/: Cargo.toml
pallets/doctors/: Cargo.toml
pallets/doctors/src/: benchmarking.rs  interface.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/electronic-medical-record/: Cargo.toml
pallets/electronic-medical-record/src/: benchmarking.rs  interface.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/electronic-medical-record/traits/: Cargo.toml
pallets/escrow/: Cargo.toml  types.json
pallets/escrow/src/: lib.rs
pallets/gbio/: Cargo.toml
pallets/gbio/src/: lib.rs
pallets/genetic-analysis/: Cargo.toml
pallets/genetic-analysis-orders/: Cargo.toml
pallets/genetic-analysis-orders/benchmarking/: Cargo.toml
pallets/genetic-analysis-orders/src/: functions.rs  impl_genetic_analysis_orders.rs  interface.rs  lib.rs  migrations.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/genetic-analysis-orders/traits/: Cargo.toml
pallets/genetic-analysis/benchmarking/: Cargo.toml
pallets/genetic-analysis/src/: interface.rs  lib.rs  weights.rs
pallets/genetic-analysis/tests/: Cargo.toml
pallets/genetic-analysis/traits/: Cargo.toml
pallets/genetic-analyst-qualifications/: Cargo.toml
pallets/genetic-analyst-qualifications/benchmarking/: Cargo.toml
pallets/genetic-analyst-qualifications/src/: interface.rs  lib.rs  weights.rs
pallets/genetic-analyst-qualifications/tests/: Cargo.toml
pallets/genetic-analyst-qualifications/traits/: Cargo.toml
pallets/genetic-analysts/: Cargo.toml
pallets/genetic-analysts/benchmarking/: Cargo.toml
pallets/genetic-analysts/src/: benchmarking.rs  interface.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
pallets/genetic-analysts/tests/: Cargo.toml
pallets/genetic-analysts/traits/: Cargo.toml
pallets/genetic-data/: Cargo.toml
pallets/genetic-data/src/: benchmarking.rs  interface.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/genetic-data/traits/: Cargo.toml
pallets/genetic-testing/: Cargo.toml
pallets/genetic-testing/benchmarking/: Cargo.toml
pallets/genetic-testing/src/: interface.rs  lib.rs  weights.rs
pallets/genetic-testing/tests/: Cargo.toml
pallets/genetic-testing/traits/: Cargo.toml
pallets/health-professional/: Cargo.toml
pallets/health-professional-qualification/: Cargo.toml
pallets/health-professional-qualification/benchmarking/: Cargo.toml
pallets/health-professional-qualification/src/: functions.rs  impl_health_professional_qualification.rs  interface.rs  lib.rs  types.rs  weights.rs
pallets/health-professional-qualification/tests/: Cargo.toml
pallets/health-professional-qualification/traits/: Cargo.toml
pallets/health-professional/benchmarking/: Cargo.toml
pallets/health-professional/src/: functions.rs  impl_health_professional.rs  interface.rs  lib.rs  migrations.rs  types.rs  weights.rs
pallets/health-professional/tests/: Cargo.toml
pallets/health-professional/traits/: Cargo.toml
pallets/hospital-certifications/: Cargo.toml
pallets/hospital-certifications/benchmarking/: Cargo.toml
pallets/hospital-certifications/src/: interface.rs  lib.rs  weights.rs
pallets/hospital-certifications/tests/: Cargo.toml
pallets/hospital-certifications/traits/: Cargo.toml
pallets/hospitals/: Cargo.toml
pallets/hospitals/src/: benchmarking.rs  interface.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/labs/: Cargo.toml  types.json
pallets/labs/benchmarking/: Cargo.toml
pallets/labs/src/: benchmarking.rs  interface.rs  lab_interface.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
pallets/labs/tests/: Cargo.toml
pallets/labs/traits/: Cargo.toml
pallets/menstrual-subscription/: Cargo.toml
pallets/menstrual-subscription/benchmarking/: Cargo.toml
pallets/menstrual-subscription/src/: benchmarking.rs  functions.rs  impl_menstrual_subscription.rs  interface.rs  lib.rs  migrations.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/menstrual-subscription/tests/: Cargo.toml
pallets/menstrual-subscription/traits/: Cargo.toml
pallets/opinion/: Cargo.toml
pallets/opinion-requestor/: Cargo.toml
pallets/opinion-requestor/benchmarking/: Cargo.toml
pallets/opinion-requestor/src/: functions.rs  impl_opinion_requestor.rs  interface.rs  lib.rs  migrations.rs  types.rs  weights.rs
pallets/opinion-requestor/tests/: Cargo.toml
pallets/opinion-requestor/traits/: Cargo.toml
pallets/opinion/benchmarking/: Cargo.toml
pallets/opinion/src/: functions.rs  impl_opinion.rs  interface.rs  lib.rs  types.rs  weights.rs
pallets/orders/: Cargo.toml  types.json
pallets/orders/src/: lib.rs  (+8 more)
pallets/rewards/: Cargo.toml
pallets/service-request/: Cargo.toml
pallets/services/: Cargo.toml  types.json
pallets/user-profile/: Cargo.toml
primitives/area-code/: Cargo.toml
primitives/duration/: Cargo.toml
primitives/menstrual-cycle-log/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs
(+325 files in other folders)
