[package]
authors = ['Debio Developer <https://github.com/debionetwork>']
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'debio-runtime'
repository = 'https://github.com/debionetwork'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
# External Dependencies
log = { version = '0.4.14', default-features = false }
hex-literal = { version = '0.3.3', optional = true }
serde = { features = ['derive'], optional = true, version = '1.0.119' }

# Substrate Dependencies
## Substrate Primitive Dependencies
sp-std = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }
sp-core = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }
sp-version = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }
sp-api = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }
sp-block-builder = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }
sp-inherents = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }
sp-offchain = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }
sp-consensus-babe = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }
sp-session = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }
sp-staking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }

## Substrate Frame Dependencies
frame-support = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }
frame-system-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false, optional = true }
frame-system-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }
frame-executive = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }
frame-election-provider-support = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false, optional = true }

## Substrate Pallet Dependencies
pallet-randomness-collective-flip = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }
pallet-timestamp = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }
pallet-balances = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }
pallet-assets = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }
pallet-transaction-payment = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }
pallet-sudo = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }
pallet-babe = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }
pallet-grandpa = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }
pallet-im-online = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }
pallet-authorship = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }
pallet-session = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false, features = ['historical'] }
pallet-session-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false, optional = true }
pallet-mmr = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }

# Grandpa Bridge Dependencies
## Grandpa Bridge Primitive Dependencies
beefy-primitives = { git = 'https://github.com/paritytech/grandpa-bridge-gadget', branch = 'polkadot-v0.9.8', default-features = false }

## Grandpa Bridge Pallet Dependencies
pallet-beefy = { git = 'https://github.com/paritytech/grandpa-bridge-gadget', branch = 'polkadot-v0.9.8', default-features = false }

# Octopus Dependencies
## Octopus Pallet Dependencies
pallet-octopus-appchain = { git = 'https://github.com/blocksphereid/octopus-pallets.git', branch = 'polkadot-v0.9.8', default-features = false }
pallet-octopus-lpos = { git = 'https://github.com/blocksphereid/octopus-pallets.git', branch = 'polkadot-v0.9.8', default-features = false }
pallet-octopus-lpos-reward-curve = { git = 'https://github.com/blocksphereid/octopus-pallets.git', branch = 'polkadot-v0.9.8', default-features = false }

# Local dependencies
labs = { path = '../pallets/labs', default-features = false }
rewards = { path = '../pallets/rewards', default-features = false }
services = { path = '../pallets/services', default-features = false }
orders = { path = '../pallets/orders', default-features = false }
genetic-testing = { path = '../pallets/genetic-testing', default-features = false }
user-profile = { path = '../pallets/user-profile', default-features = false }
electronic-medical-record = { path = '../pallets/electronic-medical-record', default-features = false }
certifications = { path = '../pallets/certifications', default-features = false }
hospitals = { path = '../pallets/hospitals', default-features = false }
hospital-certifications = { path = '../pallets/hospital-certifications', default-features = false }
doctors = { path = '../pallets/doctors', default-features = false }
doctor-certifications = { path = '../pallets/doctor-certifications', default-features = false }

[features]
default = ['std']
runtime-benchmarks = [
	'hex-literal',

	'sp-runtime/runtime-benchmarks',

    'frame-support/runtime-benchmarks',
	'frame-system/runtime-benchmarks',
    'frame-system-benchmarking',
	'frame-election-provider-support/runtime-benchmarks',
	'frame-benchmarking',

	'pallet-timestamp/runtime-benchmarks',
    'pallet-balances/runtime-benchmarks',
	'pallet-assets/runtime-benchmarks',
	'pallet-babe/runtime-benchmarks',
	'pallet-grandpa/runtime-benchmarks',
	'pallet-im-online/runtime-benchmarks',
	'pallet-mmr/runtime-benchmarks',
	
	'labs/runtime-benchmarks',
	'certifications/runtime-benchmarks',

	'doctors/runtime-benchmarks',
]
std = [
    'codec/std',
    'serde',
    'log/std',

	'sp-std/std',
	'sp-core/std',
	'sp-io/std',
	'sp-runtime/std',
	'sp-version/std',
	'sp-api/std',
    'sp-block-builder/std',
    'sp-inherents/std',
	'sp-transaction-pool/std',
    'sp-offchain/std',
    'sp-session/std',
	'sp-consensus-babe/std',
	'sp-staking/std',
	'beefy-primitives/std',

    'frame-support/std',
    'frame-system/std',
	'frame-system-rpc-runtime-api/std',
	'frame-executive/std',
	'frame-election-provider-support/std',

    'pallet-randomness-collective-flip/std',
	'pallet-timestamp/std',
	'pallet-balances/std',
	'pallet-assets/std',
	'pallet-transaction-payment/std',
	'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-sudo/std',
	'pallet-babe/std',
	'pallet-grandpa/std',
	'pallet-im-online/std',
	'pallet-beefy/std',
	'pallet-authorship/std',
	'pallet-mmr/std',
    
	'pallet-octopus-appchain/std',
	'pallet-octopus-lpos/std',

    'labs/std',
    'rewards/std',
    'services/std',
    'orders/std',
    'genetic-testing/std',
    'user-profile/std',
    'electronic-medical-record/std',
    'certifications/std',
    'hospitals/std',
    'hospital-certifications/std',
    'doctors/std',
    'doctor-certifications/std',
]
