[package]
authors = ['Debio Developer <https://github.com/debionetwork>']
edition = '2018'
homepage = 'https://debio.network'
license = 'AGPL-3.0'
name = 'debio-runtime'
repository = 'https://github.com/debionetwork'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }

[dependencies]
# External Dependencies
codec = { package = 'parity-scale-codec', version = '2.0.0', default-features = false, features = ['derive'] }
serde = { version = '1.0.119', default-features = false, features = ['derive'] }
scale-info = { version = '1.0', default-features = false, features = ['derive'] }
hex-literal = { version = '0.3.3', optional = true }
static_assertions = { version = '1.1.0' }
log = { version = '0.4.14', default-features = false }

# Substrate Dependencies
## Substrate Primitive Dependencies
sp-std = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12', default-features = false }
sp-core = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12', default-features = false }
sp-version = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12', default-features = false }
sp-api = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12', default-features = false }
sp-block-builder = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12', default-features = false }
sp-inherents = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12', default-features = false }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12', default-features = false }
sp-offchain = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12', default-features = false }
sp-consensus-babe = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12', default-features = false }
sp-session = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12', default-features = false }
sp-staking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12', default-features = false }
beefy-primitives = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }

## Substrate Frame Dependencies
frame-support = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12', default-features = false }
frame-system-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12', default-features = false, optional = true }
frame-system-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12', default-features = false }
frame-executive = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12', default-features = false }
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12', default-features = false, optional = true }

## Substrate Pallet Dependencies
pallet-randomness-collective-flip = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12', default-features = false }
pallet-timestamp = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12', default-features = false }
pallet-balances = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12', default-features = false }
pallet-assets = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12', default-features = false }
pallet-transaction-payment = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12', default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12', default-features = false }
pallet-sudo = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12', default-features = false }
pallet-babe = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12', default-features = false }
pallet-grandpa = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12', default-features = false }
pallet-im-online = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12', default-features = false }
pallet-authorship = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12', default-features = false }
pallet-session = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12', default-features = false, features = ['historical'] }
pallet-session-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12', default-features = false, optional = true }
pallet-mmr = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12', default-features = false }
pallet-beefy = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }
pallet-beefy-mmr = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }
pallet-mmr-primitives = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }

# Octopus Dependencies
## Octopus Pallet Dependencies
pallet-octopus-appchain = { git = 'https://github.com/octopus-network/octopus-pallets.git', branch = 'release-v0.9.12', default-features = false }
pallet-octopus-lpos = { git = 'https://github.com/octopus-network/octopus-pallets.git', branch = 'release-v0.9.12', default-features = false }
pallet-octopus-upward-messages = { git = 'https://github.com/octopus-network/octopus-pallets.git', branch = 'release-v0.9.12', default-features = false }

# Local dependencies
labs = { path = '../pallets/labs', default-features = false }
rewards = { path = '../pallets/rewards', default-features = false }
services = { path = '../pallets/services', default-features = false }
service-request = { path = '../pallets/service-request', default-features = false }
services-benchmarking = { path = '../pallets/services/benchmarking', default-features = false, optional = true }
orders = { path = '../pallets/orders', default-features = false }
orders-benchmarking = { path = '../pallets/orders/benchmarking', default-features = false, optional = true }
genetic-testing = { path = '../pallets/genetic-testing', default-features = false }
genetic-testing-benchmarking = { path = '../pallets/genetic-testing/benchmarking', default-features = false, optional = true }
user-profile = { path = '../pallets/user-profile', default-features = false }
electronic-medical-record = { path = '../pallets/electronic-medical-record', default-features = false }
certifications = { path = '../pallets/certifications', default-features = false }
certifications-benchmarking = { path = '../pallets/certifications/benchmarking', default-features = false, optional = true }
hospitals = { path = '../pallets/hospitals', default-features = false }
hospital-certifications = { path = '../pallets/hospital-certifications', default-features = false }
hospital-certifications-benchmarking = { path = '../pallets/hospital-certifications/benchmarking', default-features = false, optional = true }
doctors = { path = '../pallets/doctors', default-features = false }
doctor-certifications = { path = '../pallets/doctor-certifications', default-features = false }
doctor-certifications-benchmarking = { path = '../pallets/doctor-certifications/benchmarking', default-features = false, optional = true }

[features]
default = ['std']
std = [
    'codec/std',
	'serde/std',
	'scale-info/std',
    'log/std',

	'sp-std/std',
	'sp-core/std',
	'sp-runtime/std',
	'sp-version/std',
	'sp-api/std',
    'sp-block-builder/std',
    'sp-inherents/std',
	'sp-transaction-pool/std',
    'sp-offchain/std',
    'sp-session/std',
	'sp-consensus-babe/std',
	'sp-staking/std',
	'beefy-primitives/std',

    'frame-support/std',
    'frame-system/std',
	'frame-system-rpc-runtime-api/std',
	'frame-executive/std',

    'pallet-randomness-collective-flip/std',
	'pallet-timestamp/std',
	'pallet-balances/std',
	'pallet-assets/std',
	'pallet-transaction-payment/std',
	'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-sudo/std',
	'pallet-babe/std',
	'pallet-grandpa/std',
	'pallet-im-online/std',
	'pallet-authorship/std',
	'pallet-mmr/std',
	'pallet-beefy/std',
    'pallet-beefy-mmr/std',
	'pallet-mmr-primitives/std',

	'pallet-octopus-appchain/std',
	'pallet-octopus-lpos/std',
    'pallet-octopus-upward-messages/std',

    'labs/std',
    'rewards/std',
    'services/std',
	'service-request/std',
    'orders/std',
    'genetic-testing/std',
    'user-profile/std',
    'electronic-medical-record/std',
    'certifications/std',
    'hospitals/std',
    'hospital-certifications/std',
    'doctors/std',
    'doctor-certifications/std',
]
runtime-benchmarks = [
	'hex-literal',

	'sp-runtime/runtime-benchmarks',

    'frame-support/runtime-benchmarks',
	'frame-system/runtime-benchmarks',
    'frame-system-benchmarking',
	'frame-benchmarking',

	'pallet-timestamp/runtime-benchmarks',
    'pallet-balances/runtime-benchmarks',
	'pallet-assets/runtime-benchmarks',
	'pallet-babe/runtime-benchmarks',
	'pallet-grandpa/runtime-benchmarks',
	'pallet-im-online/runtime-benchmarks',
	'pallet-mmr/runtime-benchmarks',

	'labs/runtime-benchmarks',
	'services-benchmarking',
	'certifications-benchmarking',
	'orders-benchmarking',
	'electronic-medical-record/runtime-benchmarks',
	'hospitals/runtime-benchmarks',
	'hospital-certifications-benchmarking',
	'doctors/runtime-benchmarks',
	'doctor-certifications-benchmarking',
	'genetic-testing-benchmarking',
	'user-profile/runtime-benchmarks',
	'rewards/runtime-benchmarks',
]
